<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    tools:context=".faq">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape2"
                android:text="@string/faq"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq1"
                android:textColor="@color/blue"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faqans1"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq2"
                android:textColor="@color/blue"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faqans2"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq3"
                android:textColor="@color/blue"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faqans3"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq4"
                android:textColor="@color/blue"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />
            <TextView
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faqans4"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>