<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    tools:context=".create_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:src="@drawable/icon"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:padding="@dimen/_15sdp"
            android:textColor="#2464a6"
            android:fontFamily="@font/comfortaa_light"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape1"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textColor="@color/blue"
                android:textSize="15dp"/>
            <EditText
                android:id="@+id/etname"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/editTextFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textColor="@color/blue"
                android:textSize="15dp"/>
            <EditText
                android:id="@+id/etmobile"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:inputType="number"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/editTextFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/blue"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textSize="15dp"/>
            <EditText
                android:id="@+id/etage"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:inputType="number"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/editTextFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blue"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textSize="15dp"/>
            <EditText
                android:id="@+id/etpswd"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/editTextFont"/>

            <Button
                android:id="@+id/btncreate_account"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/shape2"
                android:textSize="@dimen/btnTextFont"/>

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/blue"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="15dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>